# mod-host

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
cmake/: build_opts.cmake
src/: effects.c  effects.h  mod-host.c  mod-host.h  socket.c  worker.c
tests/: effectlib_test.c
utils/: infogen
